fix overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -18,6 +18,8 @@
 
 body {
   margin: 0;
+  max-width: 100vw !important;
+  overflow-x: hidden !important;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
